--- a/menu/templates/menu/menu_item_edit.html
+++ b/menu/templates/menu/menu_item_edit.html
@@ -68,7 +68,8 @@
                             <i class="fas fa-info-circle fa-2x me-3"></i>
                             <div>
                                 <strong>Quản lý Giá bán:</strong><br>
-                                Để thay đổi giá bán, vui lòng sử dụng chức năng <a href="#" class="alert-link">Quản lý
+                                Để thay đổi giá bán, vui lòng sử dụng chức năng <a href="/admin/menu/pricing/"
+                                    class="alert-link">Quản lý
                                     Lịch sử Giá</a> (Admin Panel).
                             </div>
                         </div>
