--- a/templates/base.html
+++ b/templates/base.html
@@ -175,8 +175,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="nav navbar-nav ms-auto">
                             <li class="nav-item">
-                                <span class="nav-link">Xin chào, <strong>{{ user.username }}</strong> ({{
-                                    user.get_role_display }})</span>
+                                <span class="nav-link">Xin chào, <strong>{{ user.username }}</strong></span>
                             </li>
                             <li class="nav-item">
                                 <form action="{% url 'core:logout' %}" method="post" class="d-inline">
